fixed footer location

--- a/index.html
+++ b/index.html
@@ -288,12 +288,13 @@
             background-color: #fff;
             width: 5em;
         }
-
+        
         .tv-shows {
             display: flex;
             flex-wrap: wrap;
             align-items: center;
             justify-content: center;
+            min-height: 100vh;
         }
 
         .tv-show {
