fixed search bar

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
             }
 
             .header .search-container #search-bar {
+                margin: 0 auto;
                 margin-bottom: 10px;
             }
 
