transition in soc med icons

--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@
             margin: 8px;
             padding: 5px;
             border-radius: 50%;
+
+            transition: 0.4s ease;
+        }
+
+        footer .icons .icon-container:hover {
+            background-color: #fff;
         }
 
         footer .icons a .soc-med-icon {
