--- a/index.html
+++ b/index.html
@@ -562,6 +562,12 @@
                         alt="soc-med-icon">
                 </a>
             </div>
+            <div class="icon-container">
+                <a href="mailto:jerwin.jek@gmail.com" target="_blank"><img
+                        src="https://cdn-icons-png.flaticon.com/512/2099/2099199.png" class="soc-med-icon"
+                        alt="soc-med-icon">
+                </a>
+            </div>
         </div>
         <div class="full-name">Lalap, Jerwin P.</div>
         <div class="section">BS Information Technology 3-1</div>
