--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
     </script>
 </head>
 
-<body>
+<body onload="getTvShow(1)">
     <!-- to be shown only when retrieving data from API -->
     <div id="loading-screen">
         <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Youtube_loading_symbol_1_(wobbly).gif"
@@ -584,14 +584,6 @@
         <div class="section">BS Information Technology 3-1</div>
         <div class="activity">Activity 4 - Web Development</div>
     </footer>
-
-
-    <script>
-        // dito ko po nilagay yung pagtawag sa getTvShow()
-        // para po macreate muna yung mga element sa body tag
-        // na kailangan sa getTvShow()
-        getTvShow(1);
-    </script>
 
 </body>
 
