--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         .tv-shows {
             display: flex;
             flex-wrap: wrap;
-            align-items: center;
+            /* align-items: center; */
             justify-content: center;
             min-height: 100vh;
         }
